crates/dbdict-cli/tests/snapshots/cli__multiple_diagnostics_json_output.snap
---
source: crates/dbdict-cli/tests/cli.rs
expression: "serde_json::to_string_pretty(&value).unwrap()"
---
{
  "problems": [
    {
      "code": "S09",
      "expected": "A document should point readers to the spec with `$learn_more`.",
      "kind": "spec",
      "location": {
        "end_column": 8,
        "end_line": 1,
        "start_column": 0,
        "start_line": 1
      },
      "message": "`$learn_more` is not set",
      "severity": "warning",
      "suggestion": {
        "replacement": "$learn_more: http://data-dict.tidyverse.org/\n",
        "title": "point readers to the spec"
      }
    },
    {
      "code": "S07",
      "expected": "A `number(id)` column must describe its data with `examples`.",
      "kind": "spec",
      "location": {
        "end_column": 24,
        "end_line": 8,
        "start_column": 14,
        "start_line": 8
      },
      "message": "has type `number(id)` but is missing `examples`",
      "severity": "error"
    },
    {
      "code": "S08",
      "expected": "A column with `units` must have type `number(quantity)`.",
      "kind": "spec",
      "location": {
        "end_column": 17,
        "end_line": 12,
        "start_column": 15,
        "start_line": 12
      },
      "message": "has `units` but has type `string`",
      "severity": "error"
    }
  ],
  "status": "error"
}
