crates/dbdict-cli/tests/snapshots/cli__no_args_lists_all_subcommands.snap
---
source: crates/dbdict-cli/tests/cli.rs
expression: stdout
---
Usage: dbdict <COMMAND>

Commands:
  validate-spec  Validate a dbdict.yaml file or directory against the spec [default: .]
  validate-meta  Validate a dataset's column names and types against a data dictionary
  validate-data  Validate a dataset's values against a data dictionary
  spec           Print the dbdict.yaml specification
  types parquet  Print column types for a parquet file
  skill read     Skill for reading and understanding a data dictionary
  skill write    Skill for creating or updating a data dictionary
  help           Print this message or the help of the given subcommand(s)
