crates/dbdict-cli/tests/snapshots/cli__types_duckdb_prints_every_relation.snap
---
source: crates/dbdict-cli/tests/cli.rs
expression: stdout
---
orders
  #  column  type
  ─────────────────────────────────────────────────
  1  id      INTEGER
  2  home    STRUCT(city VARCHAR, postcode INTEGER)

trades
  #  column  type
  ────────────────────────
  1  qty     BIGINT
  2  price   DECIMAL(12,2)
